add docker-compose.yml and docker-compose.dev.yml files

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,8 @@ version: "2"
 services:
   php:
     container_name: openloyalty_backend
-    image: dkarameris/open-loyalty-fpm
+    image: divante/open-loyalty-fpm
+    ##image: dkarameris/open-loyalty-fpm
     links:
       - db
       - elk
@@ -14,7 +15,8 @@ services:
         - .env
   nginx:
     container_name: openloyalty_frontend
-    image: deejaymathew/open-loyalty-web
+    image: divante/open-loyalty-web
+    ##image: deejaymathew/open-loyalty-web
     links:
       - php
     ports:
