--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -43,7 +43,7 @@ services:
     ports:
       - "9200:9200"
   db:
-    container_name: open_loyalty_db
+    container_name: open_loyalty_dbgi
     image: postgres:9
     ports:
       - "5432:5432"
